	* implemented ags_lv2_plugin_event_buffer_concat()
	* implemented ags_synth_util_get_xcross_count() and related type specific implementations
	* implemented ags_synth_generator_compute()
	* implemented ags_synth_generator_compute_with_audio_signal()
	* deprecated ags_lv2_plugin_alloc_event_buffer()
	* deprecated ags_lv2_plugin_concat_event_buffer()
	* implemented ags_lv2_urid_manager_unmap()
	* fixed AgsExportSoundcard to don't add device as being NULL
	* fixed ags_lv2_option_manager_get_option() to lookup correctly
	* fixed ags_lv2_option_manager_set_option() to lookup correctly
	* new unit-test ags_lv2_option_manager_test.c
	* new unit-test ags_lv2_plugin_test.c
	* new unit-test ags_lv2_preset_test.c
	* new unit-test ags_lv2_uri_map_manager_test.c
	* new unit-test ags_lv2_urid_manager_test.c
	* new unit-test ags_lv2_worker_manager_test.c
	* new unit-test ags_lv2ui_manager_test.c
	* new unit-test ags_lv2ui_plugin_test.c
	* new unit-test ags_audio_connection_test.c
	* TODO:JK: new unit-test ags_input_test.c

ags (0.9.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented new task AgsResetPeak
	* implemented ags_audio_buffer_util_peak() and related
	* refactored ags-peak recall to use above and compute only as needed

ags (0.9.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory leak related to mutex attributes
	* fixed deny multi-start of AgsChannelThread or AgsAudioThread
	* fixed deny multi-stop of AgsChannelThread or AgsAudioThread
	* minor code improvements

ags (0.9.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed many missing return values
	* fixed some unitialized pointers
	* fixed 64 bit portability issue in ags_recall_template_find_all_type()

ags (0.9.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unitialized pointer in AgsCellPattern and AgsPatternBox animation

ags (0.9.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]