@@ -150,9 +150,15 @@ ags_lv2_worker_manager_pull_worker(AgsLv2WorkerManager *worker_manager)
   AgsLv2Worker *lv2_worker;
   AgsThread *thread;
 
+  if(!AGS_IS_LV2_WORKER_MANAGER(worker_manager)){
+    return(NULL);
+  }
+  
   thread = ags_thread_pool_pull(worker_manager->thread_pool);
+  
   g_atomic_int_or(&(thread->sync_flags),
 		  (AGS_THREAD_RESUME_INTERRUPTED));
+  
   lv2_worker = ags_lv2_worker_new(thread);
   
   pthread_mutex_lock(AGS_RETURNABLE_THREAD(thread)->reset_mutex);
